# Aelvyril

./: .gitignore  .jcodemunch.jsonc  =0.9.0  =1.44.0  BENCHMARK_COMPARISON.md  CHANGELOG.md  FIXES_APPLIED.md  FrontendOrchestratorPlan.md  Missing.MD  ORCHESTRATOR_PLAN.md  PiiBenchmarkPlan.md  PiiBenchmarkReport.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  db_status_vars.txt  eslint.config.js  index.html  package-lock.json  package.json  plan.md  plan_token_usage_stats.md  pnpm-lock.yaml  tsconfig.app.tsbuildinfo  tsconfig.build.json  tsconfig.json  tsconfig.tsbuildinfo
src-tauri/: Cargo.toml  build.rs  presidio_requirements.txt  presidio_service.py  rustfmt.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: benchmark.rs  lib.rs  main.rs  setup.rs  state.rs
src-tauri/src/audit/: mod.rs  open.rs  store.rs
src-tauri/src/bootstrap/: setup.rs
src-tauri/src/bridge/: mod.rs
src-tauri/src/clipboard/: mod.rs  monitor.rs
src-tauri/src/commands/: audit.rs  benchmark.rs  clipboard.rs  lists.rs  mod.rs  onboarding.rs  orchestrator.rs  pattern_mining.rs  providers.rs  rate_limit.rs  security.rs  sessions.rs  settings.rs  status.rs  token_usage.rs
src-tauri/src/config/: mod.rs  store.rs
src-tauri/src/gateway/: auth.rs  forward.rs  mod.rs  pii_handler.rs  router.rs  server.rs  session_id.rs  streaming.rs
src-tauri/src/keychain/: mod.rs
src-tauri/src/lists/: mod.rs
src-tauri/src/llama/: detector.rs  mod.rs  prompt_helper.py  requirements.txt  server.rs
src-tauri/src/model/: downloader.rs  executor.rs  features.rs  mod.rs  onnx_detect.rs
src-tauri/src/onboarding/: mod.rs  tool_detection.rs
src-tauri/src/orchestrator/: context.rs  contracts.rs  errors.rs  executor.rs  mod.rs  (+4 more)
src-tauri/tests/: e2e_providers.rs  integration_tests.rs  recognizer_tests.rs
(+371 files in other folders)
