[package]
name = "aelvyril"
version = "0.1.0"
edition = "2021"
description = "A local desktop privacy gateway for AI workflows"

[lib]
name = "aelvyril_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros", "ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["stream", "json", "blocking"] }
reqwest-eventsource = "0.6"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
once_cell = "1"
thiserror = "2"
keyring = "3"
sha2 = "0.10"
hex = "0.4"
rand = "0.9"
url = "2"
async-trait = "0.1"
parking_lot = "0.12"
dashmap = "6"
async-stream = "0.3"
tokio-stream = "0.1"
tokio-tungstenite = "0.26"
rusqlite = { version = "0.34", features = ["bundled"] }
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
notify-rust = "4"
dirs = "6"
ndarray = "0.17"
rcgen = { version = "0.13", features = ["x509-parser"], optional = true }
ort = { version = "2.0.0-rc.12", optional = true }
tokenizers = { version = "0.22", optional = true }

[features]
tls = ["rcgen"]
onnx = ["ort", "tokenizers"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
